assets/css/screen.css
/* ... */
/* The author credit area after the post */
.post-footer {
    position: relative;
    margin: 4rem 0 0 0;
    padding: 4rem 0 0 0;
    border-top: #EBF2F6 1px solid;
}

.post-footer h4 {
    font-size: 1.8rem;
    margin: 0;
}

.post-footer p {
    margin: 1rem 0;
    font-size: 1.4rem;
    line-height: 1.6em;
}

/* list of author links - location / url */
.author-meta {
    padding: 0;
    margin: 0;
    list-style: none;
    font-size: 1.4rem;
    line-height: 1;
    font-style: italic;
    color: #9EABB3;
}

.author-meta li {
    float: left;
    margin-left: 10px; /* space to the left of the bullet */
}

/* bullet divider */
.author-meta li:before {
    content: "•";
    display: inline-block;
    margin-right: 10px; /* space to the right of the bullet */
    color: #BBC7CC;
}

/* disable the bullet divider for the first item in the list */
.author-meta li:first-child { margin-left: 0; }
.author-meta li:first-child:before { display: none; }

.author-meta a {
    color: #9EABB3;
}
.author-meta a:hover {
    color: #57A3E8;
}

/* Create some space to the right for the share links */
.post-footer .author {
    margin-right: 180px;
}

/* Drop the share links in the space to the right.
   Doing it like this means it's easier for the author bio
   to be flexible at smaller screen sizes while the share
   links remain at a fixed width the whole time */
.post-footer .share {
    position: absolute;
    top: 4rem;
    right: 0;
    width: 140px;
}

.post-footer .share a {
    font-size: 1.8rem;
    display: inline-block;
    margin: 1rem 1.6rem 1.6rem 0;
    color: #BBC7CC;
    text-decoration: none;
}

.post-footer .share a:hover {
    color: #50585D;
}


/* ==========================================================================
   6. Tag archive
   ========================================================================== */

.archive-template .site-head {
    height: auto;
    padding-bottom: 5rem;
}

.archive-template .site-head a {
    color: #fff;
}

.archive-template .blog-logo {
    display: block;
    margin-top: 5rem;
}

.tag-archive-header {
    padding: 20px 0;
    text-align: center;
    max-width: 700px;
    margin: 4rem auto;
    border-bottom: 1px solid #EBF2F6;
    position: relative;
}

.tag-archive-header:after {
    display: block;
    content: "";
    width: 7px;
    height: 7px;
    border: #E7EEF2 1px solid;
    position: absolute;
    bottom: -5px;
    left: 50%;
    margin-left: -5px;
    background: #fff;
    -webkit-border-radius: 100%;
    -moz-border-radius: 100%;
    border-radius: 100%;
    box-shadow: #fff 0 0 0 5px;
}

.archive-template .blog-title {
    display: inline-block;
    padding: 2.5rem 0;
}

/* ==========================================================================
   7. Third Party Elements - Embeds from other services
   ========================================================================== */

/* Github */

.gist table {
    margin: 0;
    font-size: 1.4rem;
}

.gist .line-number {
    min-width: 25px;
    font-size: 1.1rem;
}


/* ==========================================================================
   8. Pagination - Tools to let you flick between pages
   ========================================================================== */

/* The main wrapper for our pagination links */
.pagination {
    position: relative;
    width: 80%;
    max-width: 700px;
    margin: 4rem auto;
    font-family: 'Open Sans', sans-serif;
    font-size: 1.3rem;
    color: #9EABB3;
    text-align: center;
}

.pagination a {
    color: #9EABB3;
}

/* Push the previous/next links out to the left/right */
.older-posts,
.newer-posts {
    position: absolute;
    display: inline-block;
    padding: 0 15px;
    border: #EBF2F6 2px solid;
    text-decoration: none;
    border-radius: 30px;
    transition: border ease 0.3s;
}

.older-posts {
    right: 0;
}

.page-number {
    display: inline-block;
    padding: 2px 0;
}

.newer-posts {
    left: 0;
}

.older-posts:hover,
.newer-posts:hover {
    border-color: #9EABB3;
}


/* ==========================================================================
   9. Footer - The bottom of every page
   ========================================================================== */

.site-footer {
    box-shadow:0 0 10px rgba( 0, 0, 0, 0.2 );
    position: relative;
    margin: 8rem 0 0 0;
    border-top: 10px solid #fefe8c;
    font-family: 'Open Sans', sans-serif;
    font-size: 1.3rem;
    line-height: 1.7em;
    color:#59361f;
    text-align: center;
    background: #e5e573;
}

.site-footer .tentacle-thing {
    overflow:auto;
    min-height:200px;
    max-height:444px;
    background: transparent url(/assets/blog-footer.gif) 0 bottom no-repeat;
    position:relative;
    left:-130px;
}

.site-footer .info {
    text-align:left;
    background:#fcfcad;
    opacity:0.9;
    box-shadow: 0 0 4px rgba( 0, 0, 0, 0.1 );
    width:264px;
    margin:42px 0 42px 40px;
    padding:17px 18px;
    position:relative;
}

.site-footer .foot-head {
    margin:0 0 12px;
    font-size:26px;
    color:#5c992e;
}

.site-footer .postscript {
    box-shadow:inset 0 4px 8px #718a35;
    border-top:1px solid #f1f1b6;
    background:#a3cc52;
    text-align:left;
    color:#59361f;
    font-size:14px;
    height:31px;
    line-height:31px;
}

.site-footer .postscript .copy {
    margin:0 0 0 122px;
}

.site-footer .ray:before {
    content: '';
    width:134px;
    height:72px;
    position:absolute;
    top:-40px;
    left:0;
    background: url(/assets/ray-right-semi.png) 0 0 no-repeat;
    background-size:cover;
}

.site-footer a {
    text-decoration: none;
}

.poweredby .icon-ghost {
    font-weight: 700;
    text-decoration: none;
}

.poweredby .icon-ghost:hover {
    text-decoration: none;
}

.poweredby .icon-ghost:before {
    font-size: 1rem;
    margin-right: 0.2em;
}
/* ... */

